--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,4 +1,89 @@
-body {
-  font-family: Verdana, Helvetica, sans-serif;
-  background-color: #DDDDDD;
+html 
+{ 
+	height: 100% 
+}
+body 
+{ 
+	height: 100% 
+}
+#top {
+    position: relative;
+    height: 128px
+}
+#nearby {
+    position: relative;
+    top: 0px;
+    float: right;
+    height: 100%;
+    width: 25%;
+    z-index: 999
+}
+#search {
+    position: relative;
+    top: 0px;
+    float: left;
+    padding: 10px 0;
+	height: 100%;
+	width: 75%;
+    z-index: 999
+}
+#nearby2{
+    position: absolute;
+    padding: 10px;
+    width: 64px;
+    background-color: rgba(255,255,255,0.9);
+    top: 65px;
+    right: 0%;
+    margin: 20px 0 0 -100px;
+    text-align: center;
+    z-index: 999
+}
+#map-canvas 
+{
+	position: absolute;
+	width: 100%;
+	height: 60%; 
+	padding: 0;
+}
+.controls {
+	margin-top: 16px;
+    border: 1px solid transparent;
+    border-radius: 2px 0 0 2px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    height: 32px;
+    outline: none;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+}
+#pac-input {
+	background-color: #fff;
+	padding: 0 11px 0 13px;
+	width: 400px;
+	font-family: Roboto;
+	font-size: 15px;
+	font-weight: 300;
+	text-overflow: ellipsis;
+}
+
+#pac-input:focus {
+	border-color: #4d90fe;
+	margin-left: -1px;
+	padding-left: 14px;  /* Regular padding-left + 1. */
+	width: 401px;
+}
+
+.pac-container {
+	font-family: Roboto;
+}
+
+#type-selector {
+	color: #fff;
+	background-color: #4d90fe;
+	padding: 5px 11px 0px 11px;
+}
+
+#type-selector label {
+	font-family: Roboto;
+	font-size: 13px;
+	font-weight: 300;
 }
